--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@ body {
   margin: 0;
   position: relative;
   background-image: url("./assets/bcg.jpg");
+  /* background-repeat: no-repeat; */
+  object-fit: cover;
   min-height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
